syntax = "proto3";

package messari.orca_whirlpool.v1;

message Pools {
  repeated Pool data = 1;
}

message Pool {
  string address = 1;

  string token_mint_a = 2;
  string token_vault_a = 3;
  
  string token_mint_b = 4;
  string token_vault_b = 5;

  int64 created_timestamp = 6;
  uint64 created_block_number = 7;
}

message Deposits {
  repeated Deposit data = 1;
}

message Deposit {
  string id = 1;

  string token_a = 2;
  string token_b = 3;

  string amount_a = 4;
  string amount_b = 5;

  string output_amount = 6;

  string to = 7;
  string from = 8;

  uint64 slot = 100;
  string txn_id = 101;
  uint64 block_height = 102;
  int64 block_timestamp = 103;
  string block_hash = 104;
}

message Withdraws {
  repeated Withdraw data = 1;
}

message Withdraw {
  string id = 1;

  string token_a = 2;
  string token_b = 3; 

  string amount_a = 4;
  string amount_b = 5;

  string output_amount = 6;
  
  string to = 7;
  string from = 8;

  uint64 slot = 100;
  string txn_id = 101;
  uint64 block_height = 102;
  int64 block_timestamp = 103;
  string block_hash = 104;
}

message Swaps {
  repeated Swap data = 1;
}

message Swap {
  string id = 1;

  string amount_in = 2;
  string amount_out = 3;
  
  string token_in = 4;
  string token_out = 5;

  string to = 6;
  string from = 7;

  uint64 slot = 100;
  string txn_id = 101;
  uint64 block_height = 102;
  int64 block_timestamp = 103;
  string block_hash = 104;
}

message Events {
  repeated Event data = 1;
}

message Event {
  oneof type {
    InitializePool initalize_pool = 10;
    IncreaseLiquidity increase_liquidity = 20;
    DecreaseLiquidity decrease_liquidity = 30;
    TwoHopSwap two_hop_swap = 40;
    OrcaSwap swap = 50;
  }

  uint64 slot = 100;
  string txn_id = 101;
  uint64 block_height = 102;
  int64 block_timestamp = 103;
  string block_hash = 104;
}

message InitializePool {
  Instruction instruction = 1;
  Accounts accounts = 2;

  message Instruction {
    uint32 bumps = 1;
    uint32 tick_spacing = 2;
    string initial_sqrt_price = 3;
  }

  message Accounts {
    string whirlpools_config = 1;
    string token_mint_a = 2;
    string token_mint_b = 3;
    string funder = 4;
    string whirlpool = 5;
    string token_vault_a = 6;
    string token_vault_b = 7;
    string fee_tier = 8;
    string token_program = 9;
    string system_program = 10;
    string rent = 11;
  }
}

message IncreaseLiquidity {
  Instruction instruction = 1;
  Accounts accounts = 2;

  message Instruction {
      string liquidity_amount = 1;
      
      string token_max_a = 3;
      optional string amount_a = 2;
      
      string token_max_b = 5;
      optional string amount_b = 4;
  }

  message Accounts {
    string whirlpool = 1;
    string token_program = 2;
    string position_authority = 3;
    string position = 4;
    string position_token_account = 5;
    string token_owner_account_a = 6;
    string token_owner_account_b = 7;
    string token_vault_a = 8;
    string token_vault_b = 9;
    string tick_array_lower = 10;
    string tick_array_upper = 11;
  }
}

message DecreaseLiquidity {
  Instruction instruction = 1;
  Accounts accounts = 2;

  message Instruction {
      string liquidity_amount = 1;
      
      string token_min_a = 2;
      optional string amount_a = 3;
      
      string token_min_b = 4;
      optional string amount_b = 5;
  }

  message Accounts {
    string whirlpool = 1;
    string token_program = 2;
    string position_authority = 3;
    string position = 4;
    string position_token_account = 5;
    string token_owner_account_a = 6;
    string token_owner_account_b = 7;
    string token_vault_a = 8;
    string token_vault_b = 9;
    string tick_array_lower = 10;
    string tick_array_upper = 11;
  }
}

message TwoHopSwap {
  Instruction instruction = 1;
  Accounts accounts = 2;

  message Instruction {
    string amount = 1;
    
    optional string amount_a_one = 2;
    optional string amount_b_one = 3;
    
    optional string amount_a_two = 4;
    optional string amount_b_two = 5;

    string other_amount_threshold = 6;
    
    bool amount_specified_is_input = 7;
    bool a_to_b_one = 8;
    bool a_to_b_two = 9;
    
    string sqrt_price_limit_one = 10;
    string sqrt_price_limit_two = 11;
  }

  message Accounts {
    string token_program = 1;
    string token_authority = 2;
    string whirlpool_one = 3;
    string whirlpool_two = 4;
    string token_owner_account_one_a = 5;
    string token_vault_one_a = 6;
    string token_owner_account_one_b = 7;
    string token_vault_one_b = 8;
    string token_owner_account_two_a = 9;
    string token_vault_two_a = 10;
    string token_owner_account_two_b = 11;
    string token_vault_two_b = 12;
    string tick_array_one0 = 13;
    string tick_array_one1 = 14;
    string tick_array_one2 = 15;
    string tick_array_two0 = 16;
    string tick_array_two1 = 17;
    string tick_array_two2 = 18;
    string oracle_one = 19;
    string oracle_two = 20;
  }
}

message OrcaSwap {
  Instruction instruction = 1;
  Accounts accounts = 2;

  message Instruction {
    string amount = 1;
    
    optional string amount_a = 2;
    optional string amount_b = 3;
    
    string other_amount_threshold = 4;
    string sqrt_price_limit = 5;
    
    bool amount_specified_is_input = 6;
    bool a_to_b = 7;
  }

  message Accounts {
    string token_program = 1;
    string token_authority = 2;
    string whirlpool = 3;
    string token_owner_account_a = 4;
    string token_vault_a = 5;
    string token_owner_account_b = 6;
    string token_vault_b = 7;
    string tick_array_0 = 8;
    string tick_array_1 = 9;
    string tick_array_2 = 10;
    string oracle = 11;
  }
}
